@@ -1,9 +1,16 @@
+2011-02-20  Kevin B. Kenny  <kennykb@acm.org>
+
+	* tests/tdbcmysql.test:
+		Added rudimentary test for 'nextresults' - the method
+		is a dummy because the calls supported by tdbc::mysql
+		do not allow for multiple result sets.
+
 2011-01-26  Kevin B. Kenny  <kennykb@acm.org>
 
 	* doc/tdbc_mysql.n:
 	Added empty comment at the start of each manpage because 'man'
 	interprets comments there as directives.
-	
+
 2011-01-25  Kevin B. Kenny  <kennykb@acm.org>
 
 	* generic/tdbcmysql.c: Fixed a bug in data types of small integers
